--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pixi-tileset-loader",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Webpack loader for generating tilesets for PIXI.js",
   "main": "index.js",
   "files": [
-    "lib", "index.js"
+    "lib",
+    "index.js"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
